deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: retro-aim
  name: retro-aim
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: retro-aim
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: retro-aim
    spec:
      containers:
        - env:
          image: ghcr.io/celesrenata/retro-aim:latest
          imagePullPolicy: Always
          name: retro-aim
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 5190
              protocol: TCP
            - containerPort: 5196
              protocol: TCP
            - containerPort: 5197
              protocol: TCP
            - containerPort: 5191
              protocol: TCP
            - containerPort: 5193
              protocol: TCP
            - containerPort: 5195
              protocol: TCP
            - containerPort: 5192
              protocol: TCP
            - containerPort: 5194
              protocol: TCP
            - containerPort: 22
              protocol: TCP
          resources:
            requests: {}
            limits:
               cpu: 1 
               memory: 2Gi
          volumeMounts:
            - mountPath: /app/data
              name: retro-aim-pvc
      restartPolicy: Always
      volumes:
        - name: retro-aim-pvc
          persistentVolumeClaim:
            claimName: retro-aim-pvc
