service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retro-aim
spec:
  ports:
    - name: "ssh"
      port: 5198 
      protocol: TCP
      targetPort: 22
    - name: "oscar1"
      port: 5190
      protocol: TCP
      targetPort: 5190
    - name: "oscar2"
      port: 5191
      protocol: TCP
      targetPort: 5191
    - name: "oscar3"
      port: 5192
      protocol: TCP
      targetPort: 5192
    - name: "oscar4"
      port: 5193
      protocol: UDP
      targetPort: 5193
    - name: "oscar5"
      port: 5194
      protocol: UDP
      targetPort: 5194
    - name: "oscar6"
      port: 5195
      protocol: TCP
      targetPort: 5195
    - name: "oscar7"
      port: 5196
      protocol: UDP
      targetPort: 5196
    - name: "oscar8"
      port: 5197
      protocol: TCP
      targetPort: 5197
  selector:
    io.kompose.service: rentro-aim
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: steamvr-node-exporter
  labels:
    prometheus.kubevirt.io: "node-exporter"
spec:
  ports:
  - name: metrics
    port: 9100
    targetPort: 9100
    protocol: TCP
  selector:
    prometheus.kubevirt.io: "node-exporter"
