ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retro-aim-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  labels:
    app: retro-aim
spec:
  rules:
    - host: retro-aim.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: retro-aim
                port:
                  number: 8080
